Update to prevent horizontal overflowing in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,13 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Lato", "Roboto", sans-serif;
   font-size: 62.5%;
   font-weight: 300;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
